--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Thingy
-email: your-email@domain.com
+title: Testing Website for Git from Github.com
+email: eric22154@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  I can code!
-baseurl: "" # the subpath of your site, e.g. /blog
+  If you are seeing this, that means I can finally edit things on Github! Go use it at github.com!
+baseurl: "/testing" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  Quantumleap459
 
 # Build settings
 markdown: kramdown
