--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Testing Website for Git from Github.com
-email: eric22154@gmail.com
+email: none
 description: > # this means to ignore newlines until "baseurl:"
   If you are seeing this, that means I can finally edit things on Github! Go use it at github.com!
 baseurl: "" # the subpath of your site, e.g. /blog
